--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files:
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# C extensions:
 *.so
 
-# Distribution / packaging
+# Distribution / packaging:
 .Python
 build/
 develop-eggs/
@@ -28,15 +28,15 @@ MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+#  before PyInstaller builds the exe, so as to inject date/other infos into it:
 *.manifest
 *.spec
 
-# Installer logs
+# Installer logs:
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test / coverage reports:
 htmlcov/
 .tox/
 .nox/
@@ -49,7 +49,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
+# Translations:
 *.mo
 *.pot
 
@@ -65,29 +65,29 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Sphinx documentation:
 docs/_build/
 
-# PyBuilder
+# PyBuilder:
 target/
 
-# Jupyter Notebook
+# Jupyter Notebook:
 .ipynb_checkpoints
 
 # IPython
 profile_default/
 ipython_config.py
 
-# pyenv
+# pyenv:
 .python-version
 
-# celery beat schedule file
+# celery beat schedule file:
 celerybeat-schedule
 
-# SageMath parsed files
+# SageMath parsed files:
 *.sage.py
 
-# Environments
+# Environments:
 .env
 .venv
 env/
@@ -96,20 +96,20 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project settings:
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project settings:
 .ropeproject
 
-# mkdocs documentation
+# mkdocs documentation:
 /site
 
-# mypy
+# mypy:
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# Pyre type checker:
 .pyre/
